--- a/week2/project/bikeshop/part2/views/shop.ejs
+++ b/week2/project/bikeshop/part2/views/shop.ejs
@@ -57,7 +57,7 @@
             <th class="text-center" scope="row"><%=  counter++ %></th>
             <td class="text-center"><img style="height: 40px;" src=<%= dataCardBike[i].urlImage %>></td>
             <td class="text-center"><%= dataCardBike[i].name %></td>
-            <td class="d-flex align-items-center justify-content-center"><input class="mr-1 text-center" type="number" placeholder="Quantity" value="<%= dataCardBike[i].quantity %>"><button type="button" class="btn btn-outline-info btn-sm"name="button"><i class="fas fa-sync-alt"></i></button></td>
+            <td class="d-flex align-items-center justify-content-center"><input class="mr-1 text-center" type="number" max="100" min="0" placeholder="Quantity" value="<%= dataCardBike[i].quantity %>"><button type="button" class="btn btn-outline-info btn-sm"name="button"><i class="fas fa-sync-alt"></i></button></td>
             <td class="text-center"><%= dataCardBike[i].price %>€</td>
             <td class="text-center"><%= dataCardBike[i].price * dataCardBike[i].quantity %>€</td>
             <td class="text-center"><button type="button" class="btn btn-outline-info btn-sm"name="button"><i class="far fa-trash-alt"></i></button></td>
