fin projet part1 weather app

--- a/week3/project/weatherApp/part1/public/stylesheets/style.css
+++ b/week3/project/weatherApp/part1/public/stylesheets/style.css
@@ -20,7 +20,7 @@ a {
 
 
 .home {
-  background-image: url('../images/weather.jpg');
+  background-image: url('/images/weather.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
