--- a/week3/challenges/day1/bikeShop/part6/public/stylesheets/style.css
+++ b/week3/challenges/day1/bikeShop/part6/public/stylesheets/style.css
@@ -20,3 +20,42 @@ a, a:hover{
 .basket-img{
   width: 170px;
 }
+
+.bandeau {
+  height: 300px;
+  width: 100%;
+  background-color: red;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  overflow-x: scroll;
+}
+
+.bandeauInterieur {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.imageBanner {
+  height: 200px;
+  border-radius: 20px;
+  margin-bottom: 10px;
+}
+
+.inBandeau {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.nameBandeau {
+  color: #FFF;
+  margin: 0;
+  margin-right: 20px;
+}
