fin projet part3 weatherApp

--- a/week3/project/weatherApp/part3/public/stylesheets/style.css
+++ b/week3/project/weatherApp/part3/public/stylesheets/style.css
@@ -93,8 +93,15 @@ input {
 }
 
 .updateCities {
-  font-size: 25px;
+  font-size: 15px;
   margin: 20px 0px;
+  color: inherit;
+  text-decoration: inherit;
+}
+
+.updateCities:hover {
+  color: inherit;
+  text-decoration: inherit;
 }
 
 .cardCity {
