--- a/week3/project/weatherApp/part3/views/index.ejs
+++ b/week3/project/weatherApp/part3/views/index.ejs
@@ -32,7 +32,7 @@
             <div class="content d-flex flex-column flex-lg-row justify-content-lg-between align-items-center align-items-lg-start">
                 <img class="imageMap" src="/images/map.png">
                 <div class="contentListCity d-flex flex-column align-items-center">
-                    <h1 class="updateCities">Update Cities <i class="fa-solid fa-arrows-rotate"></i></h1>
+                    <a href="/updateData" class="updateCities">Update Cities <i class="fa-solid fa-arrows-rotate"></i></a href="/updateData">
                     <% if(cityList.length == 0){ %>
                     <h6 style="color: red;">No cities found</h6>
                     <% } else { %>
@@ -45,7 +45,7 @@
                             <p class="max-celcius"><%= cityList[i].maxTemp %>°c</p>
                             <p class="min-celcius"><%= cityList[i].minTemp %></p>
                         </div>
-                        <a href="delete-city?position=<%= i %>"><i class="fa-solid fa-circle-xmark cross"></i></a>
+                        <a href="delete-city?name=<%= cityList[i].name %>"><i class="fa-solid fa-circle-xmark cross"></i></a>
                     </div>
                     <%
                     }
