--- a/week3/project/weatherApp/part4/views/index.ejs
+++ b/week3/project/weatherApp/part4/views/index.ejs
@@ -15,7 +15,7 @@
             <!-- HEADER -->
             <nav class=" header navbar navbar-light bg-dark col-lg-12">
                 Weather App
-                <a class="logout" href="/">Deconnexion</a>
+                <a class="logout" href="/logout">Deconnexion</a>
             </nav>
         </div>
         <div class="row col-lg-8">
