--- a/week3/project/weatherApp/part4/views/login.ejs
+++ b/week3/project/weatherApp/part4/views/login.ejs
@@ -33,7 +33,7 @@
                 </div>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" name="emailAddress" class="form-control" aria-describedby="emailHelp" placeholder="Enter email">
+                  <input type="email" name="emailAddressUp" class="form-control" aria-describedby="emailHelp" placeholder="Enter email">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Password</label>
