--- a/week4/project/blackBoard/part2/views/messages.ejs
+++ b/week4/project/blackBoard/part2/views/messages.ejs
@@ -27,74 +27,12 @@
 
   <body id="page-top">
 
-    <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-
-      <a class="navbar-brand mr-1" href="/">Black Board</a>
-
-      <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
-        <i class="fas fa-bars"></i>
-      </button>
-
-
-      <!-- Navbar -->
-      <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0">
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/tasks-page">
-            <i class="fas fa-bell fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/messages-page">
-            <i class="fas fa-envelope fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow">
-          <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user-circle fa-fw"></i>
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-            <h6 class="dropdown-header">Hi Mike Doe</h6>
-          </div>
-        </li>
-      </ul>
-
-    </nav>
+    <%- include('header'); %>
 
     <div id="wrapper">
 
       <!-- Sidebar -->
-      <ul class="sidebar navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Dashboard</span>
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/users-page">
-            <i class="fas fa-fw fa-users"></i>
-            <span>Clients</span></a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/catalog-page">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Catalogue Produits</span></a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/orders-list-page">
-            <i class="fas fa-shopping-basket"></i>
-            <span>Commandes</span></a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/charts">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Charts</span></a>
-        </li>
-      </ul>
+      <%- include('sidebar'); %>
 
       <div id="content-wrapper">
 
@@ -109,36 +47,21 @@
               </tr>
             </thead>
             <tbody>
+              <% let readMessage = "";
+              for(let i=0; i<adminMessages.length; i++){
+                if(adminMessages[i].read){
+                  readMessage = "fas fa-envelope-open";
+                } else {
+                  readMessage = "fas fa-envelope";
+                }
+              %>
               <tr>
-                <td><i class="fas fa-envelope"></i></td>
-                <td>Question sur les delais de livraison ...</td>
-                <td>john@gmail.com</td>
-                <td>20/01/19</td>
+                <td><i class="<%= readMessage %>"></i></td>
+                <td><%= adminMessages[i].title %></td>
+                <td><%= adminMessages[i].sender %></td>
+                <td><%= adminMessages[i].dateExp %></td>
               </tr>
-              <tr>
-                <td><i class="fas fa-envelope"></i></td>
-                <td>Question sur la trotinette M365</td>
-                <td>matt@gmail.com</td>
-                <td>18/01/19</td>
-              </tr>
-              <tr>
-                <td><i class="far fa-envelope-open"></i></td>
-                <td>Avez vous le modèle Dualtron Thunder ?</td>
-                <td>jerome@gmail.com</td>
-                <td>06/01/19</td>
-              </tr>
-              <tr>
-                <td><i class="far fa-envelope-open"></i></td>
-                <td>Livraison avant Noël ?</td>
-                <td>zoe@hotmail.com</td>
-                <td>20/12/18</td>
-              </tr>
-              <tr>
-                <td><i class="far fa-envelope-open"></i></td>
-                <td>Problème de batterie sur ma trottinette</td>
-                <td>jeff@hotmail.com</td>
-                <td>18/01/19</td>
-              </tr>
+              <% } %>
             </tbody>
           </table>
 
