--- a/week4/project/blackBoard/part2/views/tasks.ejs
+++ b/week4/project/blackBoard/part2/views/tasks.ejs
@@ -27,125 +27,45 @@
 
   <body id="page-top">
 
-    <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-
-      <a class="navbar-brand mr-1" href="/">Black Board</a>
-
-      <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
-        <i class="fas fa-bars"></i>
-      </button>
-
-      <!-- Navbar -->
-      <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0">
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/tasks-page">
-            <i class="fas fa-bell fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/messages-page">
-            <i class="fas fa-envelope fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow">
-          <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user-circle fa-fw"></i>
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-            <h6 class="dropdown-header">Hi Mike Doe</h6>
-          </div>
-        </li>
-      </ul>
-
-    </nav>
+    <%- include('header'); %>
 
     <div id="wrapper">
 
       <!-- Sidebar -->
-      <ul class="sidebar navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Dashboard</span>
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/users-page">
-            <i class="fas fa-fw fa-users"></i>
-            <span>Clients</span></a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/catalog-page">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Catalogue Produits</span></a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/orders-list-page">
-            <i class="fas fa-shopping-basket"></i>
-            <span>Commandes</span></a>
-        </li>
-
-
-        <li class="nav-item">
-          <a class="nav-link" href="/charts">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Charts</span></a>
-        </li>
-      </ul>
+      <%- include('sidebar'); %>
 
       <div id="content-wrapper">
 
         <div class="container-fluid">
 
           <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action">
-                <div class="d-flex w-100 justify-content-between">
-                  <h5 class="mb-1">Rembourssement client</h5>
-                  <small>Date de la demande: 21/01/2019</small>
-                </div>
-                <p class="mb-1">Le client 655545 souhaite un remboursement intergale de sa commande</p>
-                <small>Echéance: 24/01/2019</small>
-            </a>
+            <% let backgroundTask = "list-group-item-action";
+            let dateCloture = "";
+            for(let i=0; i<adminTasks.length; i++){
+              if(adminTasks[i].dateCloture != null){
+                backgroundTask= "list-group-item-success";
+              }
+              if(adminTasks[i].dateCloture == null && adminTasks[i].dateDue <= new Date()){
+                backgroundTask= "list-group-item-danger";
+              }
 
-            <a href="#" class="list-group-item list-group-item-action list-group-item-danger">
+              if(adminTasks[i].dateCloture != null){
+                dateCloture = `Cloturé le: ${dateFormat(adminTasks[i].dateCloture)}`
+              } else if (adminTasks[i].dateCloture == null && adminTasks[i].dateDue <= new Date()){
+                dateCloture = `Échéance dépassée: ${dateFormat(adminTasks[i].dateDue)}`
+              } else {
+                dateCloture = `Échéance: ${dateFormat(adminTasks[i].dateDue)}`
+              }
+            %>
+            <a href="#" class="list-group-item <%= backgroundTask %>">
                 <div class="d-flex w-100 justify-content-between">
-                  <h5 class="mb-1">Retour marchandise</h5>
-                  <small>Date de la demande: 19/01/2019</small>
+                  <h5 class="mb-1"><%= adminTasks[i].category %></h5>
+                  <small>Date de la demande: <%= dateFormat(adminTasks[i].dateInsert) %></small>
                 </div>
-                <p class="mb-1">Le client 655545 souhaite un remboursement intergale de sa commande</p>
-                <small><i class="fas fa-exclamation-circle"></i> Echéance dépassée : 21/01/2019</small>
+                <p class="mb-1"><%= adminTasks[i].name %></p>
+                <small><%= dateCloture %></small>
             </a>
-
-            <a href="#" class="list-group-item list-group-item-action list-group-item-success">
-                <div class="d-flex w-100 justify-content-between">
-                  <h5 class="mb-1">Problème avec le transporteur</h5>
-                  <small>Date de la demande: 14/01/2019</small>
-                </div>
-                <p class="mb-1">Contacter urgement le transporteur DHL car problème dans le suivi des commandes du lot 6675</p>
-                <small><i class="fas fa-check-square"></i> Cloturée le: 18/01/2019</small>
-            </a>
-
-            <a href="#" class="list-group-item list-group-item-action list-group-item-success">
-                <div class="d-flex w-100 justify-content-between">
-                  <h5 class="mb-1">Retour client</h5>
-                  <small>Date de la demande: 3/01/2019</small>
-                </div>
-                <p class="mb-1">Le client 33467 souhaite un remboursement partiel de sa commande 755687</p>
-                <small><i class="fas fa-check-square"></i> Cloturée le: 5/01/2019</small>
-            </a>
-
-            <a href="#" class="list-group-item list-group-item-action list-group-item-success">
-                <div class="d-flex w-100 justify-content-between">
-                  <h5 class="mb-1">Delais livraison marchandise </h5>
-                  <small>Date de la demande: 29/12/2018</small>
-                </div>
-                <p class="mb-1">Contacter le transporteur pour valider avec lui la date de la livraison de la marchandise</p>
-                <small><i class="fas fa-check-square"></i> Cloturée le: 30/12/2018</small>
-            </a>
-
+            <% } %>
           </div>
 
 
