fin part3 projet blackBoard

--- a/week4/project/blackBoard/part3/views/charts.ejs
+++ b/week4/project/blackBoard/part3/views/charts.ejs
@@ -43,19 +43,19 @@
           <div class="row">
 
             <div class="col-12 col-md-4 mb-3 chart">
-              <canvas id="genderChart" data-gendre="<%= data %>"></canvas>
+              <canvas id="genderChart" width="100" height="100" data-male="<%= maleCounter %>" data-female="<%= femaleCounter %>"></canvas>
             </div>
 
             <div class="col-12 col-md-4 mb-3 chart">
-              <img class="img-fluid" src="/images/chart2.jpg">
+              <canvas id="doughnutChart" width="100" height="100" data-mr="<%= messagesLu %>" date-mnr="<%= messagesNonLu %>"></canvas>
             </div>
 
             <div class="col-12 col-md-4 mb-3 chart">
-              <img class="img-fluid" src="/images/chart3.jpg">
+              <canvas id="pieChart" width="100" height="100" data-shipment1="<%= commandesPayeExpedie %>" data-shipment2="<%= commandesPayeNonExpedie %>"></canvas>
             </div>
 
             <div class="col-12 col-md-4 mb-3 chart">
-              <img class="img-fluid" src="/images/chart4.jpg">
+              <canvas id="lineChart" width="100" height="100" data-ca="<%= JSON.stringify(CA) %>"></canvas>
             </div>
             
           </div>
@@ -93,7 +93,7 @@
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.bundle.min.js "></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="./js/dataviz.js"></script>
 
   </body>
